syntax = "proto3";

option csharp_namespace = "DemoComp.DemoGrpcClient.Messages";

package messages;

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}
